InsuranceOrg/force-app/main/default/objects/vlocity_ins__CustomFilter__c/vlocity_ins__CustomFilter__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Vlocity Field Map Custom Filter custom setting describes a filter used to query the source object records during the process of cloning one object to another.</description>
    <label>Custom Filter</label>
</CustomObject>