InsuranceOrg/force-app/main/default/objects/vlocity_ins__CustomFilter__c/fields/vlocity_ins__FieldName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FieldName__c</fullName>
    <description>Name of the filter field</description>
    <inlineHelpText>Name of the filter field</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>