InsuranceOrg/force-app/main/default/objects/vlocity_ins__CustomFilter__c/fields/vlocity_ins__Index__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Index__c</fullName>
    <description>Index of the filter</description>
    <inlineHelpText>Index of the filter</inlineHelpText>
    <label>Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>