InsuranceOrg/force-app/main/default/objects/vlocity_ins__CustomFilter__c/fields/vlocity_ins__SourceSObjectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SourceSObjectType__c</fullName>
    <label>Source SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>